--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   padding: 0;
 }
 body {
-  background-color: #334257;
+  background-color: #1e2129;
   color: #eeeeee;
   font-family: "Varela Round", sans-serif;
 }
