--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,8 @@ input {
   text-align: center;
 }
 .card {
-  width: 200px;
-  height: 250px;
+  width: 75%;
+  height: 10%;
   background-color: #0a192f;
   padding: 10px;
   box-sizing: border-box;
